@@ -1,2 +1,3 @@
 #define OPTS_FORWARD_CREDS           0x00000002
 #define OPTS_FORWARDABLE_CREDS       0x00000001
+#define RCMD_BUFSIZ	5120
